Fixed horizontal align on on apply_steps in main_splash.

--- a/frontend/less/custom.less
+++ b/frontend/less/custom.less
@@ -96,7 +96,6 @@ body.public .about_the_service {
   line-height: 1.5;
 }
 
-
 /**Steps to apply**/
 
 p.step_headline{
@@ -106,6 +105,13 @@ p.step_headline{
 .apply_steps{
   margin-top: 20px;
 }
+
+// Custom number of columns for apply steps
+.col-md-3-33{
+    .make-md-column(3.33)
+}
+
+
 .step_headline{
   color:@splash-background;
 }
